changing structure after merging with develop

--- a/Pipfile
+++ b/Pipfile
@@ -1,4 +1,4 @@
-[[source]]
+    [[source]]
 url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
@@ -10,8 +10,8 @@ numpy = "*"
 pandas = "*"
 sklearn = "*"
 matplotlib = "*"
+vk-api = "*"
+fastapi = "*"
 
 [dev-packages]
 
-[requires]
-python_version = "3.8"
