changes in fitter

--- a/.gitignore
+++ b/.gitignore
@@ -7,8 +7,7 @@ tmp_results/
 venv/
 vk_config*.json
 research/spark/dist/
-research/spark/worker-dir/
+research/spark/worker-dir/*
 # research/spark/mock_data/
 # research/spark/unused_mock_data/
 research/spark/data/
-research/spark/worker-dir/
