--- a/research/spark/app/config.json
+++ b/research/spark/app/config.json
@@ -1,7 +1,14 @@
 {
-  "data_dir": "/home/gldsn/Projects/skady-ml/research/spark/data/",
-  "incoming_fit_stream": {"type":  "csv", "name": "mock_incoming_interacts"},
-  "saving_unused_stream": {"type":  "csv", "name":  "unused_interacts"},
+  "base_path": "/home/gldsn/Projects/skady-ml",
+  "worker_dir": "research/spark/worker_dir",
+  "fit_stream": {"type":  "csv", "relative_path": "research/spark/data/mock_incoming_interacts"},
   "data_params": {"min_num_inters_to_fit":  10, "use_vk":  false},
-  "app_name": "ML-universal"
+  "app_name": "ML-universal",
+  "train_params": {
+    "batch_size": 8,
+    "nsteps": 10,
+    "model": {
+      "type": "cf"
+    }
+  }
 }
