added obtain from ml to git

--- a/service/ml/config.json
+++ b/service/ml/config.json
@@ -1,22 +1,27 @@
 {
-  "base_path": "/home/gldsn/Projects/skady-ml",
-  "worker_dir": "worker_dir",
   "mode": "spark",
-  "device": "cpu",
-  "fit_stream": {"type":  "csv", "relative_path": "data/mock_incoming_interacts"},
-  "data_params": {"min_num_inters_to_fit":  10, "use_vk":  false},
-  "app_name": "ML-universal",
-  "model_checkpoint_name": "model.dill",
-  "train_params": {
-    "batch_size": 8,
-    "nsteps": 10
+  "fitter_params": {
+    "nepochs": 10,
+    "batch_size": 16,
+    "model_checkpoint_name": "model.dill"
   },
-  "recommend_params": {
+  "recommender_params": {
     "batch_size": 16
   },
-  "model_params": {
+  "model_manager_params": {
     "nusers": 0,
-    "nitems": 0,
-    "hidden_size": 20
+    "hidden_size": 20,
+    "device": "cpu"
+  },
+  "obtainer_params": {
+    "fit_stream": {"type":  "csv", "relative_path": "data/mock_incoming_interacts"},
+    "min_num_inters_to_fit":  10,
+    "use_vk":  false,
+    "app_name": "ML-universal",
+    "batch_size": 8
+  },
+  "paths": {
+    "base_path": "/home/gldsn/Projects/skady-ml",
+    "worker_dir": "worker_dir"
   }
 }
